--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build --file ./utilities/docker/livegeppetto/Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build ./utilities/docker/livegeppetto/ --file Dockerfile --tag my-image-name:$(date +%s)
