Update Dockerfile - fix permissions

--- a/utilities/docker/wormsim/Dockerfile
+++ b/utilities/docker/wormsim/Dockerfile
@@ -58,10 +58,12 @@ RUN cd $HOME/workspace/org.geppetto.frontend/src/main/webapp &&\
 
 
 # Test: Adding wormsim v0.2.6 to check for possible incompatibilities
+USER root
 RUN apt-get update
 RUN apt-get install -y npm 
 RUN npm install -g bower
 RUN apt-get install -y python-is-python3
+USER developer
 
 COPY bower.json workspace/org.geppetto.frontend/src/main/webapp/js/
 RUN cd workspace/org.geppetto.frontend/src/main/webapp/js && bower install
