Update Dockerfile - replace geppetto model with model.neuroml and swc

--- a/utilities/docker/wormsim/Dockerfile
+++ b/utilities/docker/wormsim/Dockerfile
@@ -16,11 +16,11 @@ RUN mkdir -p workspace &&\
   ../copy.sh http://github.com/openworm/org.geppetto.git "${targetBranch}" "${originBranch}" "${defaultBranch}"
 
 WORKDIR $HOME/workspace
-RUN ../copy.sh https://github.com/openworm/org.geppetto.model.git "${targetBranch}" "${originBranch}" "${defaultBranch}" &&\
-  cd org.geppetto.model &&\
-  /bin/echo -e "\e[96mMaven install org.geppetto.model\e[0m" &&\
-  mvn -DskipTests --quiet install &&\
-  rm -rf src
+# RUN ../copy.sh https://github.com/openworm/org.geppetto.model.git "${targetBranch}" "${originBranch}" "${defaultBranch}" &&\
+#   cd org.geppetto.model &&\
+#   /bin/echo -e "\e[96mMaven install org.geppetto.model\e[0m" &&\
+#   mvn -DskipTests --quiet install &&\
+#   rm -rf src
 
 RUN ../copy.sh https://github.com/openworm/org.geppetto.core.git "${targetBranch}" "${originBranch}" "${defaultBranch}" &&\
   cd org.geppetto.core &&\
@@ -29,6 +29,12 @@ RUN ../copy.sh https://github.com/openworm/org.geppetto.core.git "${targetBranch
   rm -rf src
 
 RUN ../copy.sh https://github.com/openworm/org.geppetto.model.neuroml.git "${targetBranch}" "${originBranch}" "${defaultBranch}" &&\
+  cd org.geppetto.model.neuroml &&\
+  /bin/echo -e "\e[96mMaven install org.geppetto.model.neuroml\e[0m" &&\
+  mvn -DskipTests --quiet install &&\
+  rm -rf src
+
+RUN ../copy.sh https://github.com/openworm/org.geppetto.model.swc.git "${targetBranch}" "${originBranch}" "${defaultBranch}" &&\
   cd org.geppetto.model.neuroml &&\
   /bin/echo -e "\e[96mMaven install org.geppetto.model.neuroml\e[0m" &&\
   mvn -DskipTests --quiet install &&\
