--- a/utilities/docker/wormsim/Dockerfile
+++ b/utilities/docker/wormsim/Dockerfile
@@ -36,8 +36,8 @@ RUN ../copy.sh https://github.com/openworm/org.geppetto.model.neuroml.git "${tar
 
 # swc v0.2.6 mistakenly released as 0.2.6 in the repo
 RUN ../copy.sh https://github.com/openworm/org.geppetto.model.swc.git "0.2.6-alpha" "0.2.6-alpha" "0.2.6-alpha" &&\
-  cd org.geppetto.model.neuroml.swc &&\
-  /bin/echo -e "\e[96mMaven install org.geppetto.model.neuroml.swc\e[0m" &&\
+  cd org.geppetto.model.swc &&\
+  /bin/echo -e "\e[96mMaven install org.geppetto.model.swc\e[0m" &&\
   mvn -DskipTests --quiet install &&\
   rm -rf src
 
