Update Dockerfile - fix source cmd issue

--- a/utilities/docker/wormsim/Dockerfile
+++ b/utilities/docker/wormsim/Dockerfile
@@ -87,7 +87,7 @@ USER root
 
 # install node.js manually
 RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
-RUN source ~/.bashrc
+# RUN source ~/.bashrc
 RUN nvm install 16.13.0
 
 RUN npm install -g bower
