--- a/utilities/docker/wormsim/Dockerfile
+++ b/utilities/docker/wormsim/Dockerfile
@@ -19,15 +19,11 @@ RUN rm -rf /etc/apt/sources.list/*
 RUN rm -rf /etc/apt/sources.list.d/*
 
 COPY sources.list /etc/apt/sources.list
-# RUN rm /etc/apt/sources.list.d/jessie-backports.list
-# # RUN apt-get -o Acquire::Check-Valid-Until=false update && apt-get install -qq -y sudo xvfb 
-# RUN apt-get -o Acquire::Check-Valid-Until=false update 
 
 RUN apt-get -o Acquire::Check-Valid-Until=false -y --force-yes update &&\
   apt-get -o Acquire::Check-Valid-Until=false -y --force-yes upgrade &&\
   apt-get install --no-install-recommends npm -o Acquire::Check-Valid-Until=false -y --force-yes
 
-RUN npm config set ignore-scripts true
 RUN npm install -g bower
 RUN ln -s /usr/bin/nodejs /usr/bin/node
 RUN npm cache clean --force
@@ -89,25 +85,26 @@ RUN ../copy.sh https://github.com/openworm/org.geppetto.frontend.git "${targetBr
 
 
 
-# Test: Adding wormsim v0.2.6 to check for possible incompatibilities
-# RUN ../copy.sh https://github.com/openworm/org.wormsim.frontend.git "${targetBranch}" "${originBranch}" "${defaultBranch}"
-RUN ../copy.sh https://github.com/openworm/org.wormsim.frontend.git "master" "master" "master"
+# # Test: Adding wormsim v0.2.6 to check for possible incompatibilities
+# # RUN ../copy.sh https://github.com/openworm/org.wormsim.frontend.git "${targetBranch}" "${originBranch}" "${defaultBranch}"
+# RUN ../copy.sh https://github.com/openworm/org.wormsim.frontend.git "master" "master" "master"
 
-WORKDIR $HOME
-COPY bower.json workspace/org.geppetto.frontend/src/main/webapp/js/
-RUN cd workspace/org.geppetto.frontend/src/main/webapp/js && bower install
-COPY components.js workspace/org.geppetto.frontend/src/main/webapp/js/
+# WORKDIR $HOME
+# COPY bower.json workspace/org.geppetto.frontend/src/main/webapp/js/
+# RUN cd workspace/org.geppetto.frontend/src/main/webapp/js && bower install
+# COPY components.js workspace/org.geppetto.frontend/src/main/webapp/js/
 
-RUN cd workspace/org.wormsim.frontend/utilities/ && sudo python applyWormSimTheme.py && sudo python deployWormSimComponents.py && sudo python deployWormSimData.py
+# RUN cd workspace/org.wormsim.frontend/utilities/ && sudo python applyWormSimTheme.py && sudo python deployWormSimComponents.py && sudo python deployWormSimData.py
 
-RUN cd $HOME/workspace/org.wormsim.frontend &&\
-  /bin/echo -e "\e[96mMaven install org.wormsim.frontend\e[0m" &&\
-  mvn -DskipTests --quiet install &&\
-  rm -rf src
+# RUN cd $HOME/workspace/org.wormsim.frontend &&\
+#   /bin/echo -e "\e[96mMaven install org.wormsim.frontend\e[0m" &&\
+#   mvn -DskipTests --quiet install &&\
+#   rm -rf src
 
-USER root
-RUN npm cache clean --force
-USER developer
+# USER root
+# RUN npm cache clean --force
+# USER developer
+
 
 WORKDIR $HOME/workspace
 COPY --chown=1000:1000 GeppettoConfiguration.json $HOME/workspace/org.geppetto.frontend/src/main/webapp/
