Update Dockerfile - check version 0.4.2 installation without wormsim

--- a/utilities/docker/wormsim/Dockerfile
+++ b/utilities/docker/wormsim/Dockerfile
@@ -2,9 +2,13 @@ FROM metacell/java-virgo-maven:development
 
 LABEL maintainer="Facundo Rodriguez <facundo@metacell.us>"
 
-ARG targetBranch=v0.2.6-alpha
-ARG originBranch=v0.2.6-alpha
-ARG defaultBranch=v0.2.6-alpha
+ARG targetBranch=v0.4.2-alpha
+ARG originBranch=v0.4.2-alpha
+ARG defaultBranch=v0.4.2-alpha
+
+# ARG targetBranch=v0.2.6-alpha
+# ARG originBranch=v0.2.6-alpha
+# ARG defaultBranch=v0.2.6-alpha
 
 RUN /bin/echo -e "\e[1;35mORIGIN BRANCH ------------ $originBranch\e[0m" &&\
   /bin/echo -e "\e[1;35mTARGET BRANCH ------------ $targetBranch\e[0m" &&\
