Update Dockerfile - add geppetto.model for v0.4.2

--- a/utilities/docker/wormsim/Dockerfile
+++ b/utilities/docker/wormsim/Dockerfile
@@ -41,11 +41,11 @@ RUN mkdir -p workspace &&\
   ../copy.sh http://github.com/openworm/org.geppetto.git "${targetBranch}" "${originBranch}" "${defaultBranch}"
 
 WORKDIR $HOME/workspace
-# RUN ../copy.sh https://github.com/openworm/org.geppetto.model.git "${targetBranch}" "${originBranch}" "${defaultBranch}" &&\
-#   cd org.geppetto.model &&\
-#   /bin/echo -e "\e[96mMaven install org.geppetto.model\e[0m" &&\
-#   mvn -DskipTests --quiet install &&\
-#   rm -rf src
+RUN ../copy.sh https://github.com/openworm/org.geppetto.model.git "${targetBranch}" "${originBranch}" "${defaultBranch}" &&\
+  cd org.geppetto.model &&\
+  /bin/echo -e "\e[96mMaven install org.geppetto.model\e[0m" &&\
+  mvn -DskipTests --quiet install &&\
+  rm -rf src
 
 RUN ../copy.sh https://github.com/openworm/org.geppetto.core.git "${targetBranch}" "${originBranch}" "${defaultBranch}" &&\
   cd org.geppetto.core &&\
